[package]
name = "shrek-apple"
version = "0.1.0"
edition = "2021"

[dependencies]
# ndarray for handling multidimensional arrays
ndarray = "0.15"

# image crate for reading and writing images
image = "0.24"

# nalgebra for linear algebra (optional, if you want to use it for other purposes)
nalgebra = "0.29"
num = "0.4"